# scanhub

./: .buildinfo  .env  .gitignore  LICENSE  README.md  acquisition-control.app.api.html  acquisition-control.app.html  acquisition-control.html  api_device.html  api_device_manager.html  api_exam.html  api_exam_manager.html  api_mri_acquisition.html  api_mri_sequences.html  api_patient_manager.html  api_ui_patient_manager.html  api_user_login_manager.html  api_workflow.html  api_workflow_manager.html  defaultuser.csv  defaultuser.txt  development-launcher.sh  device-manager.app.api.html  device-manager.app.html  device-manager.html  device_api.html  docker-compose.yml  exam-manager.app.api.html  exam-manager.app.html  exam-manager.html  exam.html  exam_api.html  genindex.html  http-routingtable.html  index.html  init_db.sql  install-tools.sh  introduction.html  modules.html  mri_acquisition_api.html  (+20 more)
backend/: Dockerfile  pyproject.toml
backend/scanhub/: api.py  connection_manager.py  models.py  routes.py
backend/scanhub/ressources/: epi_pypulseq.seq
backend/scanhub/utilities/: sequence_plot.py
base/shared_libs/: pyproject.toml  scanhub_models.py  setup.py
base/shared_libs/src/scanhub_libraries/: models.py
docs/: Makefile  conf.py  index.rst  make.bat  pyproject.toml
docs/source/: api_exam_manager.rst  api_mri_acquisition.rst  api_patient_manager.rst  api_user_login_manager.rst  api_workflow.rst  conf.py  device_api.rst  exam.rst  exam_api.rst  index.rst  introduction.rst  mri_acquisition_api.rst  mri_sequences_api.rst  scanhub_api.rst  scanhub_techdoc.rst  techdoc_dd.rst  techdoc_di.rst  techdoc_prs.rst  techdoc_swad.rst  techdoc_swrs.rst  ui_patient_manager_api.rst  workflow_api.rst
docs/source/_openapi/: device_manager_openapi.json  device_openapi.json  exam_manager_openapi.json  exam_openapi.json  patient_manager_openapi.json  ui_patient_manager_openapi.json  user_login_manager_openapi.json  workflow_manager_openapi.json  workflow_openapi.json
docs/source/_openapi/mri/: acquisition_openapi.json  sequences_openapi.json
docs/source/_static/css/: custom.css
docs/source/_templates/autoapi/: index.rst
patient-manager/: Dockerfile  pyproject.toml  requirements.txt
patient-manager/app/: __init__.py  enums.py  main.py  models.py  routes.py
patient-manager/app/api/: connection_manager.py  dal.py  db.py  enums.py  models.py  routes.py
patient-manager/app/api/utilities/: sequence_plot.py
server/: .env_file  README.md  docker-compose.yml  patients.sql  pyproject.toml  scanhubdb.sql
server/example_data/: Site_Patient_50000.sql  Site_User_10000.sql  User_Patient_50000.sql  config_10000.sql  device_10000.sql  exampledata.sql  patient_5000.sql  procedure_50000.sql  site_100.sql  user_500.sql
server/scanhub/: api.py  main.py  routes.py
server/scanhub/database/: models.py  utils.py
server/scanhub/graphene/: mutation.py  query.py  random_date.py  subscription.py  types.py
services/acquisition-control/: Dockerfile  pyproject.toml  requirements.txt
services/acquisition-control/app/: __init__.py  main.py
services/acquisition-control/app/api/: acquisitioncontrol.py  models.py  test_model.py
services/base/shared_libs/: LICENSE  pyproject.toml
services/device-manager/: Dockerfile  pyproject.toml  requirements.txt
services/device-manager/app/: main.py  pool.py
services/device-manager/app/api/: dal.py  db.py  db_manager.py  device_endpoints.py  device_websocket.py  devices.py  exam_requests.py  models.py
services/device-manager/app/static/: index.html
services/exam-manager/: Dockerfile  pyproject.toml  requirements.txt
services/exam-manager/app/: __init__.py  dal.py  db.py  exam.py  helper.py  main.py
services/exam-manager/app/api/: dal.py  db.py  db_manager.py  exam.py  exam_api.py  models.py  mri_sequence_api.py  result_api.py  task_api.py  workflow_api.py
services/exam-manager/app/dal/: exam_dal.py  mri_sequence_dal.py  result_dal.py  task_dal.py  workflow_dal.py
services/exam-manager/app/db/: __init__.py  mongodb.py  postgres.py
services/exam-manager/app/tools/: __init__.py  dicom.py  helper.py  mrd_provider.py  mri_sequence_plot.py
services/mri/recos/cartesian-reco-service/: Dockerfile  pyproject.toml  requirements.txt
services/mri/sequence-manager/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/mri/sequence-manager/app/: __init__.py  dependencies.py  main.py
services/mri/sequence-manager/tests/: __init__.py  conftest.py  test_endpoints.py  test_mri_sequence_endpoints.py
services/orchestration-engine/: Dockerfile  README.md  dagster.yaml  pyproject.toml  workspace.yaml
services/orchestration-engine/orchestrator/: hooks.py  repository copy.py  repository.py  sensors.py
services/orchestration-engine/orchestrator/assets/: acquisition.py  mrpro_direct_reconstruction.py
services/orchestration-engine/orchestrator/hooks/: scanhub.py
services/orchestration-engine/orchestrator/io/: acquisition_data.py  idata_io_manager.py
services/orchestration-engine/orchestrator/io_managers/: idata_io_manager.py
services/orchestration-engine/orchestrator/jobs/: frequency_calibration.py  mri_calibration.py  mri_frequency_calibration.py  mrpro_image_reconstruction.py  mrpro_reco_asset_job.py
services/patient-manager/: Dockerfile  README.md  pyproject.toml
services/patient-manager/app/: main.py
services/user-login-manager/: Dockerfile  README.md  pyproject.toml
services/user-login-manager/app/: dal.py  db.py  main.py  userlogin.py
services/workflow-manager/: Dockerfile  LICENSE  LICENSE.GPL3-EXCEPT  README.md  __init__.py  pyproject.toml  requirements.txt
services/workflow-manager/app/: __init__.py  main.py
tests/services/exam-manager/: pyproject.toml  test_exam.py  test_main.py
tools/device-sdk/: README.md  pyproject.toml
tools/device-sdk/src/sdk/: client.py  (+2 more)
tools/device_sdk/: MANIFEST.in  pyproject.toml  setup.py
tools/device_sdk/device_sdk/: __init__.py  client.py  fill_mrd_template.py  websocket_handler.py
tools/device_sdk/examples/: data.mrd  device_credentials.json  example_usage.py
(+1263 files in other folders)
