[tool.poetry]
name = "ScanHub Documentation"
version = "0.1.0"
description = "Documentation for ScanHub"
authors = ["BRAIN-LINK UG <info@brain-link.de>"]
readme = "scanhub.brain-link.de"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.2.6"
pydata-sphinx-theme = "^0.14.1"
sphinxcontrib-openapi = "^0.8.1"
sphinx-autoapi = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
