[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scanhub_libraries"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
  "pydantic"
]

[project.urls]
Homepage = "https://github.com/brain-link/scanhub"

[tool.hatch.build.targets.wheel]
packages = ["src/scanhub_libraries"]