[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "acquisition-control"
version = "0.0.1"
description = "Acquisition control. Receives control cmd from ui and controls scans on devices."
authors = [
    "Joahnnes Behrens <johannes.behrens@brain-link.de>"
]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.96.0"
requests = "^2.31.0"
uvicorn = "^0.22.0"
scanhub = "^0.0.4.dev3"
types-requests = "^2.31.0.1"
httpx = "^0.25.0"

[tool.poetry.group.lint.dependencies]
mypy = "*"
flake8 = "*"
Flake8-pyproject = "*"  # flake8 by deefault cannot be configured via this toml file, this package allows the configuration
isort = "*"
autopep8 = "*"
pydocstyle = "*"
pylint = "*"
black = "^23.3.0"
poethepoet = "^0.20.0"

[tool.poetry.group.test.dependencies]
coverage = "*"
codecov = "*"
pytest = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[tool.pydocstyle]
convention = "numpy"

[tool.pylint]
py-version = "3.10"
max-attributes = 20
max-line-length = 120
extension-pkg-allow-list = ["pydantic"]
disable = ["too-few-public-methods"]    # suppress warning at pydantic BaseModel and sqlalchemy ORM model

[tool.flake8]
max-line-length = 120

[tool.mypy]
python_version = "3.10"

[tool.poe.tasks]
lint.sequence = ["isort", "black", "pylint", "flake8", "mypy", "pydocstyle"]
lint.ignore_fail = "return_non_zero"

    [tool.poe.tasks.isort]
    help = "Run isort"
    cmd  = "isort app/"

    [tool.poe.tasks.black]
    help = "Run black"
    cmd  = "black app/"

    [tool.poe.tasks.pylint]
    help = "Run pylint"
    cmd  = "pylint app/"

    [tool.poe.tasks.mypy]
    help = "Run mypy"
    cmd  = "mypy app/"

    [tool.poe.tasks.flake8]
    help = "Run flake8"
    cmd  = "flake8 app/"

    [tool.poe.tasks.pydocstyle]
    help = "Run pydocstyle"
    cmd  = "pydocstyle app/"
