[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scanhub-device-sdk"
version = "0.0.1"
description = "Software development kit to connect devices to ScanHub."
authors = [
    "Johannes Behrens <johannes.behrens@brain-link.de>",
    "David Schote <david.schote@brain-link.de>"
]
readme = "README.md"
packages = [{ include = "sdk", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
numpy = "^2.3.2"
websockets = "^15.0.1"
scanhub-libraries = { path = "../../services/base/shared_libs", develop = true }

[tool.poetry.group.lint.dependencies]
ruff = "^0.12.3"
mypy = "^1.16.1"

[tool.setuptools.package-data]
"sdk" = ["py.typed"]

[tool.ruff]
src = ["src"]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint]
# Enable linters
# E = pycodestyle (error)
# W = pycodestyle (warning)
# F = Pyflakes
# S = flake8-bandit
# I = isort
# N = pep8-naming
# D = pydocstyle
select = ["E", "W", "F", "S", "I", "N", "D"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = ["src"]
python_version = "3.13"
strict = true
warn_return_any = false
check_untyped_defs = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
