[project]
name = "scanhub-device-sdk"
version = "0.0.1"
description = "Software development kit to connect devices to ScanHub."
authors = [
    {name = "David Schote", email = "david.schote@brain-link.de"},
    {name = "Johannes Behrens", email = "johannes.behrens@brain-link.de"}
]
readme = "README.md"

[tool.poetry]
packages = [{ include = "sdk", from = "src" }]
license = "GPL-3.0-only with custom exception"
include = [
    { path = "LICENSE", format = ["sdist", "wheel"] },
    { path = "LICENSE.GPL3", format = ["sdist", "wheel"] },
    { path = "LICENSE.GPL3-EXCEPT", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
numpy = "^2.3.2"
websockets = "^15.0.1"
scanhub-libraries = { path = "../../services/base/shared_libs", develop = true }

[tool.poetry.group.lint.dependencies]
ruff = "^0.12.3"
mypy = "^1.16.1"

[tool.setuptools.package-data]
"sdk" = ["py.typed"]

[tool.ruff]
src = ["src"]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint]
# Enable linters
# E = pycodestyle (error)
# W = pycodestyle (warning)
# F = Pyflakes
# S = flake8-bandit
# I = isort
# N = pep8-naming
# D = pydocstyle
select = ["E", "W", "F", "S", "I", "N", "D"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = ["src"]
python_version = "3.13"
strict = true
warn_return_any = false
check_untyped_defs = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"