[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scanhub_libraries"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "pydantic (>=2.11.5,<3.0.0)",
  "sqlalchemy",
  "fastapi (>=0.115.12,<0.116.0)",
  "passlib[argon2] (>=1.7.4,<2.0.0)"
]

[project.urls]
Homepage = "https://github.com/brain-link/scanhub"

[tool.hatch.build.targets.wheel]
packages = ["src/scanhub_libraries"]

[tool.setuptools.package-data]
"scanhub_libraries" = ["py.typed"]
