[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scanhub-libraries"
version = "0.0.2"
license = { file = "LICENSE" }
requires-python = ">=3.13,<3.14"
dependencies = [
  "pydantic (>=2.11.7,<3.0.0)",
  "sqlalchemy (>=2.0.43,<3.0.0)",
  "dagster (>=1.11.6,<2.0.0)",
  "fastapi (>=0.116.1,<0.117.0)",
  "passlib[argon2] (>=1.7.4,<2.0.0)",
  "pydantic-settings (>=2.10.1,<3.0.0)"
]

[project.urls]
Homepage = "https://github.com/brain-link/scanhub"

[tool.hatch.build.targets.wheel]
packages = ["src/scanhub_libraries"]

[tool.setuptools.package-data]
"scanhub_libraries" = ["py.typed"]
