[tool.poetry]
name = "ScanHub Sequence Manager"
version = "0.0.1"
description = "The MRI Sequence Manager is a CRUD service that manages MRI sequences."
authors = ["Christoph Dinh <christoph.dinh@brain-link.de>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python =  ">=3.10,<3.12"
fastapi = "^0.95.2"
uvicorn = "^0.15.0"
motor = "^2.5.1"
pydantic = "^1.8.2"
python-dotenv = "^0.19.1"
python-multipart = "^0.0.6"
aiofiles = "^0.7.0"
numpy = "^1.23.0"
pypulseq = "^1.4.0"
plotly = "^5.15.0"
pydantic-numpy = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.lint.dependencies]
mypy = "*"
flake8 = "*"
Flake8-pyproject = "*"  # flake8 by deefault cannot be configured via this toml file, this package allows the configuration
isort = "*"
autopep8 = "*"
pydocstyle = "*"
pylint = "*"

[tool.poetry.group.test.dependencies]
coverage = "*"
codecov = "*"
pytest = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"

[tool.pydocstyle]
convention = "numpy"

[tool.pylint]
py-version = "3.10"
max-attributes = 20
extension-pkg-allow-list = ["pydantic"]
disable = ["too-few-public-methods"]    # suppress warning at pydantic BaseModel and sqlalchemy ORM model

[tool.flake8]
max-line-length = 120
