[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mri-cartesian-reco-service"
version = "0.0.1"
description = "The MRI cartesian reco service imlements a reconstruction for equidistant sampled cartesian K-Spaces."
authors = [
    "Christoph Dinh <christoph.dinh@brain-link.de>"
]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
aiokafka = "^0.8.1"
asyncio = "^3.4.3"
scanhub = "^0.0.4.dev3"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
numpy = "^1.24.3"
pydicom = "^2.3.1"
requests = "^2.31.0"
types-requests = "^2.31.0.2"

[tool.poetry.group.test.dependencies]
coverage = "*"
codecov = "*"
pytest = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"


[tool.poetry.group.lint.dependencies]
ruff = "^0.1.11"


[tool.ruff]
src = ["app"]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
# Enable linters
# W = pycodestyle, F = Pyflakes, S = flake8-bandit, I = isort, N = pep8-naming, D = pydocstyle
select = ["W", "F", "S", "I", "N", "D"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"
